# gpubreach

./: .gitignore  README.md  artifact_metadata.txt  gpubreach.py  init_env.sh  power_cycle_dolphin.sh  run_auto_artifacts.sh  run_cupqc_exploit.sh  run_fig10.sh  run_fig5.sh  run_fig7.sh  run_fig8.sh  run_gpubreach_demo.sh  run_make_dumpers.sh  run_ml_exploit.sh  run_regenerate_a1.sh  run_t1.sh  run_t2.sh  sample_app.cu  transfer.cuh
cred_mod/: .gitignore  Makefile  get_cred_addr.c
cupqc_exploit/: attacker_dumper.cu  change_phys.sh  dump_phys.sh  iterate_cupqc.sh  keyexchange_victim.cu  print_addr.sh
d2h-tools/: .gitignore  create_d_pattern.py
d2h-tools/cpu-exploit/: checksum_helper.h  cpu-exploit.cu
d2h-tools/gpu_mem_dumper/dumper/: Makefile  dumper.c
d2h-tools/gpu_mem_dumper/extractor/: Makefile  main.cpp  mem-dump.cpp  mem-dump.h  page-dir.cpp  page-dir.h  page-map.cpp  page-map.h  page-tab.cpp  page-tab.h  page.cpp  page.h  trans.h
d2h-tools/gpu_mem_dumper/modifier/: Makefile  modifier.cpp
d2h-tools/gpu_mem_dumper/scripts/: analyze_alloc.py  dump.sh  simulate_rowhammer.sh
d2h-tools/mem-operator/: Makefile  gpubreach.py  mem-operator.cu  sample_app.cu  transfer.cuh
data_scripts/cupqc_exploit/: attacker_dumper.cu  generate_table.sh
data_scripts/fig10/: 4kb_pt_timing.cu
data_scripts/fig5/: 4kb_it.cu  dump_phys.sh  print_page_type.sh
data_scripts/fig7/: ev_time.cu
data_scripts/fig8/: ev_time_2MB_free.cu  ev_time_4MB_free.cu
data_scripts/gpubreach_demo/: sample_app.cu
data_scripts/ml_exploit/: filter_validation_set.py  generate_table.sh  run_imagenet_models.py  template.txt  torch_attacker.cu
data_scripts/t1/: generate_table.sh  run_t1_flips.sh
data_scripts/t2/: run_t2_flips.sh
flip_config_sample/: FLIP_A1.ini  FLIP_LEFT_TMPL.ini  FLIP_RIGHT_TMPL.ini
gpu-tlb/: README.md  print_layout.py
gpu-tlb/examples/: pagemap.py
gpu-tlb/modifier/: modifier.cpp
gpuhammer/: README.md  nohup.out  run_row_sets.sh
gpuhammer/results/row_sets/: CONF_SET_A.txt  CONF_SET_D.txt  ROW_SET_A.txt
gpuhammer/src/: CMakeLists.txt
gpuhammer/src/hammer/: gpu_hammer.cu  trh.cu
gpuhammer/src/include/: gpubreach_util.cuh  rh_impls.cu  rh_kernels.cu  rh_kernels.cuh  rh_utils.cu  rh_utils.cuh
gpuhammer/src/re_gddr/: bank_set_main.cu  conf_set_main.cu  drama_conflict_prober.cu  drama_conflict_prober.cuh  gen_time_same_main.cu  load_modifiers_main.cu
gpuhammer/util/: env_purge.sh  filter_validation_set.py  plot_delay.py  reset_cuda.sh  run_campaign.py  run_known_flips.sh
iova-hint-patch/: README.md  install_drivers.sh  remove_drivers.sh
patches/: iova-hint.patch
plot_scripts/: plot_fig10.py  plot_fig5.py  plot_fig7.py  plot_fig8.py
results/sample/: app_out.out  cupqc.txt  t3.txt
src/: CMakeLists.txt  README.md  app_cli.cu  app_cpu_exploit.cu  app_demo.cu  app_transfer.cu  gpubreach_main.cu  s1_allocallmem.cu  s1_allocallmem.cuh  s2_firstRegion.cu  s2_firstRegion.cuh  s3_firstRegion_hammer.cu  s3_firstRegion_hammer.cuh  s4_secondRegion.cu  s4_secondRegion.cuh  sc_allocallmem.cu  sc_allocallmem.cuh  sc_firstPTC.cu  sc_firstPTC.cuh  sc_firstPTC_hammer.cu  sc_firstPTC_hammer.cuh  sc_firstRegion.cu  sc_firstRegion.cuh  sc_firstRegion_hammer.cu  sc_firstRegion_hammer.cuh  sc_main.cu  sc_secondPTC.cu  sc_secondPTC.cuh  sc_secondRegion.cu  sc_secondRegion.cuh
src/gpuhammer/: run_row_sets.sh
src/gpuhammer/src/: CMakeLists.txt  deviceQuery.txt
src/gpuhammer/src/hammer/: gpu_hammer.cu  simple_hammer.cu  synchronization.cu  synchronization_multi_thread.cu  synchronization_single_thread.cu  trr_sampler_size.cu
src/gpuhammer/src/re_gddr/: drama_conflict_prober.cu  gen_time_main.cu  row_set_main.cu
src/gpuhammer/util/: env_setup.sh  init_cuda.sh  run_delay.sh  run_hammer.sh  run_known_flips.sh  run_timing_task.py  run_trh.py
src/include/: INIReader.cpp  gpubreach_util.cu  gpubreach_util.cuh  rh_impls.cu  rh_impls.cuh  rh_kernels.cu  rh_utils.cu  rh_utils.cuh  sc_util.cu  sc_util.cuh
